# FormatDataProject

./: CMakeLists.txt  PhoinFormatObject.cpp  PhoinFormatObject.h  main.cpp
lib/: CMakeLists.txt  PDate.cpp  PDate.h  PTime.cpp  PTime.h
